--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,4 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: make check
-      run: docker run --rm -v $(pwd):/tmp rockylinux:8.8 /bin/sh -c "cp /home/user1/rpmbuild/RPMS/x86_64/*.rpm /tmp/"
+      run: |
+         echo "done"
+         docker run --rm -v $(pwd):/tmp rockylinux:8.8 /bin/sh -c "cp /home/user1/rpmbuild/RPMS/x86_64/*.rpm /tmp/"
+      
